--- a/static/index.html
+++ b/static/index.html
@@ -3,104 +3,129 @@
 <head>
   <meta charset="UTF-8" />
   <title>AI Resume Analyzer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <style>
-    * {
-      box-sizing: border-box;
-      font-family: 'Inter', sans-serif;
-    }
-
     body {
       margin: 0;
+      font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
       background: linear-gradient(135deg, #667eea, #764ba2);
       min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      color: #333;
     }
 
     .card {
-      background: #fff;
-      width: 100%;
-      max-width: 520px;
-      padding: 30px;
+      background: #ffffff;
+      width: 420px;
       border-radius: 16px;
-      box-shadow: 0 20px 40px rgba(0,0,0,0.2);
+      padding: 28px;
+      box-shadow: 0 20px 50px rgba(0,0,0,0.15);
       text-align: center;
     }
 
     h1 {
-      margin-bottom: 10px;
-      font-size: 26px;
-      color: #2d3748;
+      margin-top: 0;
+      font-size: 24px;
+      color: #1f2937;
     }
 
-    p {
+    p.subtitle {
+      color: #6b7280;
       font-size: 14px;
-      color: #555;
-      margin-bottom: 25px;
-    }
-
-    .upload-box {
-      border: 2px dashed #cbd5e0;
-      border-radius: 12px;
-      padding: 30px;
-      cursor: pointer;
-      transition: 0.3s;
-      margin-bottom: 20px;
-    }
-
-    .upload-box:hover {
-      border-color: #667eea;
-      background: #f7f9ff;
+      margin-bottom: 24px;
     }
 
     input[type="file"] {
-      display: none;
-    }
-
-    .upload-text {
-      font-size: 15px;
-      color: #555;
+      width: 100%;
+      padding: 12px;
+      border: 2px dashed #d1d5db;
+      border-radius: 10px;
+      margin-bottom: 16px;
+      cursor: pointer;
     }
 
     button {
-      background: #667eea;
-      color: #fff;
+      width: 100%;
+      padding: 12px;
+      background: #4f46e5;
+      color: white;
       border: none;
-      padding: 12px 20px;
-      border-radius: 8px;
+      border-radius: 10px;
       font-size: 15px;
       font-weight: 600;
       cursor: pointer;
-      width: 100%;
-      transition: 0.3s;
     }
 
     button:hover {
-      background: #5a67d8;
+      background: #4338ca;
     }
 
     .result {
-      margin-top: 20px;
+      margin-top: 22px;
       text-align: left;
-      background: #f7fafc;
-      padding: 15px;
-      border-radius: 8px;
-      font-size: 14px;
       display: none;
-      white-space: pre-wrap;
+    }
+
+    .score {
+      font-size: 22px;
+      font-weight: 700;
+      color: #111827;
+    }
+
+    .progress {
+      background: #e5e7eb;
+      border-radius: 8px;
+      overflow: hidden;
+      height: 10px;
+      margin: 8px 0 16px;
+    }
+
+    .progress-bar {
+      height: 100%;
+      background: #4f46e5;
+      width: 0%;
+      transition: width 0.5s ease;
+    }
+
+    .label {
+      font-size: 13px;
+      font-weight: 600;
+      color: #374151;
+      margin-top: 12px;
+    }
+
+    .skills {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+      margin-top: 6px;
+    }
+
+    .skill {
+      background: #eef2ff;
+      color: #4338ca;
+      font-size: 12px;
+      padding: 6px 10px;
+      border-radius: 999px;
+      font-weight: 500;
+    }
+
+    .summary {
+      background: #f9fafb;
+      padding: 12px;
+      border-radius: 10px;
+      margin-top: 10px;
+      font-size: 14px;
+      color: #374151;
     }
 
     footer {
-      margin-top: 15px;
+      margin-top: 18px;
       font-size: 12px;
-      color: #888;
+      color: #9ca3af;
+      text-align: center;
     }
   </style>
 </head>
@@ -108,53 +133,74 @@
 
   <div class="card">
     <h1>AI Resume Analyzer</h1>
-    <p>Upload your resume and get instant AI-powered feedback</p>
+    <p class="subtitle">Upload your resume and get instant AI-powered feedback</p>
 
-    <label class="upload-box">
-      <input type="file" id="resumeFile" accept=".pdf,.doc,.docx">
-      <div class="upload-text">📄 Click to upload your resume</div>
-    </label>
-
+    <input type="file" id="resumeFile" accept=".pdf,.doc,.docx,.txt" />
     <button onclick="analyzeResume()">Analyze Resume</button>
 
-    <div class="result" id="resultBox"></div>
+    <div class="result" id="result">
+      <div class="score" id="scoreText"></div>
 
-    <footer>
-      Powered by FastAPI & LLMs
-    </footer>
+      <div class="progress">
+        <div class="progress-bar" id="progressBar"></div>
+      </div>
+
+      <div class="label">Skills Found</div>
+      <div class="skills" id="skills"></div>
+
+      <div class="label">Summary</div>
+      <div class="summary" id="summary"></div>
+    </div>
+
+    <footer>Powered by FastAPI & LLMs</footer>
   </div>
 
   <script>
     async function analyzeResume() {
       const fileInput = document.getElementById("resumeFile");
-      const resultBox = document.getElementById("resultBox");
-
       if (!fileInput.files.length) {
-        alert("Please upload a resume first.");
+        alert("Please upload a resume first");
         return;
       }
 
       const formData = new FormData();
       formData.append("file", fileInput.files[0]);
 
-      resultBox.style.display = "block";
-      resultBox.textContent = "⏳ Analyzing your resume...";
+      const result = document.getElementById("result");
+      result.style.display = "block";
+      document.getElementById("scoreText").textContent = "Analyzing...";
+      document.getElementById("progressBar").style.width = "0%";
 
-      try {
-        const response = await fetch("/analyze", {
-          method: "POST",
-          body: formData
-        });
+      const response = await fetch("/analyze", {
+        method: "POST",
+        body: formData
+      });
 
-        const data = await response.json();
-        resultBox.textContent = JSON.stringify(data, null, 2);
-      } catch (error) {
-        resultBox.textContent = "❌ Error analyzing resume.";
-      }
+      const data = await response.json();
+
+      // Score
+      document.getElementById("scoreText").textContent =
+        `Resume Score: ${data.resume_score} / 100`;
+      document.getElementById("progressBar").style.width =
+        data.resume_score + "%";
+
+      // Skills
+      const skillsDiv = document.getElementById("skills");
+      skillsDiv.innerHTML = "";
+      data.skills_found.forEach(skill => {
+        const span = document.createElement("span");
+        span.className = "skill";
+        span.textContent = skill;
+        skillsDiv.appendChild(span);
+      });
+
+      // Summary
+      document.getElementById("summary").textContent = data.summary;
     }
   </script>
 
 </body>
 </html>
+
 
 
